Editing according to db design

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
               </div>
                 <div class="btn_box">
-                    <a class="btn" href="inpage.php">
+                    <a class="btn" href="main.php">
                       <p>가입</p>
                     </a>
                 </div>
